--- a/wercker.yml
+++ b/wercker.yml
@@ -4,3 +4,11 @@ build:
     - arjen/hugo-build:
         theme: ananke
         flags: --buildDrafts=true
+deploy:
+  steps:
+    - install-packages:
+        packages: git ssh-client
+    - lukevivier/gh-pages@0.2.1:
+        token: $GIT_TOKEN
+        domain: connorlu.vip
+        basedir: public
